--- a/Loop-Practice-2/index.html
+++ b/Loop-Practice-2/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Goldrush</title>
+  <title>Untitled</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-
-	<div class="page-wrapper">
 	
-		<img class='background-map' src="topo-co.jpg">
-		
-	</div>
-
-
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="main.js"></script>
 
